fixed navbar with new link to pages + fixed content width on mobile

--- a/progetto_finale/style/index.css
+++ b/progetto_finale/style/index.css
@@ -155,6 +155,12 @@ CONTENT
     padding: 2em 10em 0 10em;
 }
 
+@media screen and (max-width: 768px) {
+    .content {
+        padding: 2em 1em 0 1em;
+    }
+}
+
 /*
 =============== 
 FOOTER
