--- a/progetto_finale/style/navbar.css
+++ b/progetto_finale/style/navbar.css
@@ -54,16 +54,16 @@ nav #expanded #logo {
     grid-column: 1/3;
 }
 
-nav #expanded #recipe {
+nav #expanded #add-recipe {
     grid-column: 3/5;
 }
 
-nav #expanded #search {
-    grid-column: 5/9;
+nav #expanded #add-ingredient {
+    grid-column: 5/6;
 }
 
-nav #expanded #chefs {
-    grid-column: 10/11;
+nav #expanded #search {
+    grid-column: 7/11;
 }
 
 nav #expanded #login,
@@ -118,7 +118,7 @@ nav #expanded #nav-search button ion-icon {
         grid-column: 6/10;
     }
 
-    nav #expanded #recipe {
+    nav #expanded #add-recipe {
         grid-column: 4/6;
     }
 }
@@ -126,15 +126,15 @@ nav #expanded #nav-search button ion-icon {
 /* tablet screen */
 @media screen and (max-width: 768px) {
     nav #expanded #search {
-        grid-column: 7/10;
+        grid-column: 7/11;
     }
 
-    nav #expanded #recipe {
+    nav #expanded #add-recipe {
+        grid-column: 3/5;
+    }
+
+    nav #expanded #add-ingredient {
         grid-column: 5/7;
-    }
-
-    nav #expanded #chefs {
-        grid-column: 11/12;
     }
 }
 
@@ -188,12 +188,12 @@ nav #expanded #nav-search button ion-icon {
         padding: 0 2em;
     }
 
-    nav #expanded #recipe {
+    nav #expanded #add-recipe {
         grid-column: 1;
         grid-row: 2/3;
     }
 
-    nav #expanded #chefs {
+    nav #expanded #add-ingredient {
         grid-column: 1;
         grid-row: 3/4;
     }
